# wasm-example

./: .gitignore
wasm_backend/: .gitignore  Cargo.toml
wasm_backend/server/: main.ts  package.json
wasm_backend/src/: lib.rs
wasm_frontend/: package-lock.json  package.json
wasm_frontend/src/: App.js
wasm_frontend/src/components/: posts.js
wasm_frontend/src/wasm/: api.js  posts.js
wasm_frontend/src/wasm/middleware/: api.js
