[package]
name = "wasm_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde = { version = "1.0.188", features = ["derive"] }
wasmedge-bindgen-macro = "0.4.1"
serde_json = "1.0.105"

[lib]
crate-type = ["cdylib", "rlib"]
